--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,8 +1,79 @@
-:host{  
-    Display: block;  
-    margin-top: 1rem;  
-  }  
+:host {
+  Display: block;
+  margin-top: 1rem;
+}
 
-  .info-text {
-    text-align: center;
+.info-text {
+  text-align: center;
+}
+
+.warn {
+  background-color: red;
+  color: white;
+  /* center button to the right */
+  margin-left: auto;
+  width: fit-content;
+}
+
+.spinner {
+  width: 100%;
+}
+
+.post-image {
+  width: 100%;
+}
+
+.post-image img {
+  width: fit-content;
+  max-width: 100%;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+mat-paginator {
+  margin-top: 1rem;
+}
+
+.lds-ring {
+  display: flex;
+  position: relative;
+  margin: auto;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
   }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
