--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
+/*
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+*/
 
 :root {
   --md-sys-typescale-display1-font: Roboto;
@@ -113,6 +119,8 @@
     --md-sys-color-inverse-on-surface: #f0f0f3;
     --md-sys-color-input: #1a1c1e15;
     --md-sys-color-input-focus: #1a1c1e70;
+    --md-sys-color-post-outline: #13151615;
+    --md-sys-color-post-outline-hover: #13151640;
   }
 }
 
@@ -144,6 +152,8 @@
     --md-sys-color-inverse-on-surface: #1a1c1e;
     --md-sys-color-input: #e2e2e615;
     --md-sys-color-input-focus: #e2e2e670;
+    --md-sys-color-post-outline: #b8b8b815;
+    --md-sys-color-post-outline-hover: #b8b8b840;
   }
 }
 
@@ -152,7 +162,7 @@ body {
   background-color: var(--md-sys-color-background);
   padding: 0;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   line-height: var(--md-sys-typescale-body1-line-height);
   font-size: var(--md-sys-typescale-body1-size);
   letter-spacing: var(--md-sys-typescale-body1-tracking);
@@ -181,33 +191,6 @@ h1 {
 main {
   margin: 8px;
   padding: 8px;
-}
-
-.post-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 800px;
-  padding: 0 20px;
-  border-radius: 0.375rem;
-  background: var(--md-sys-color-surface);
-  color: var(--md-sys-color-on-surface);
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  margin-bottom: 1.75rem;
-  margin-top: 1.75rem;
-  white-space: pre-wrap;
-  /* css-3 */
-  white-space: -moz-pre-wrap;
-  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;
-  /* Opera 4-6 */
-  white-space: -o-pre-wrap;
-  /* Opera 7 */
-  word-wrap: break-word;
-  /* Internet Explorer 5.5+ */
 }
 
 button:not(.icon-button):not(.swal-confirm), input[type="submit"]:not(.icon-button) {
@@ -246,6 +229,10 @@ button:active:not(.icon-button):not(.swal-confirm), input[type="submit"]:active:
   box-shadow: 1px 3px 6px 0px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, .12);
 }
 
+button svg {
+  pointer-events: none;
+}
+
 input:not([type="checkbox"], [type="radio"], [type="submit"], [type="date"]) {
   border: 1px solid var(--md-sys-color-input);
   min-width: 190px;
@@ -279,7 +266,7 @@ textarea {
   transition: border-color 250ms ease-in-out;
 }
 
-form.error div>input.ng-invalid, form.error div>textarea.ng-invalid {
+form.ng-submitted div > input.ng-invalid, form.ng-submitted div > textarea.ng-invalid {
   border-color: var(--md-sys-color-error) !important;
 }
 
@@ -287,7 +274,7 @@ form.error div>input.ng-invalid, form.error div>textarea.ng-invalid {
   display: none;
 }
 
-form.error div div>p.error-text {
+form.ng-submitted div div > p.error-text {
   display: block;
   color: var(--md-sys-color-error);
   font-size: var(--md-sys-typescale-caption-size);
@@ -328,6 +315,34 @@ input:not([type="checkbox"], [type="radio"], [type="submit"], [type="date"]):hov
 
 input:not([type="checkbox"], [type="radio"], [type="submit"], [type="date"])::placeholder {
   color: transparent;
+}
+
+.icon-button {
+  background-color: transparent;
+  margin: 0.25rem;
+  text-align: center;
+  color: #00a8ff;
+  border: none;
+  cursor: pointer;
+  border-radius: 100%;
+  padding: 0.5rem;
+  transition: background-color 0.2s;
+}
+
+.icon-button svg {
+  display: -webkit-flex;
+  /* Safari */
+  display: flex;
+  -webkit-align-items: center;
+  /* Safari 7.0+ */
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
+.icon-button:hover {
+  background-color: #00aaff1c;
+  color: #00a8ff;
 }
 
 .floating-label-wrap {
@@ -381,3 +396,57 @@ input:not([type="checkbox"], [type="radio"], [type="submit"], [type="date"]):foc
   background-color: #F4212E;
   margin-bottom: 0.25rem;
 }
+
+@media (max-width: 590px) {
+  .post-actions {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+/* spinner */
+.lds-ring {
+  display: flex;
+  position: relative;
+  margin: auto;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* end spinner */
