--- a/src/app/authentication/login/login.component.css
+++ b/src/app/authentication/login/login.component.css
@@ -8,3 +8,22 @@
     border-radius: 1.25rem;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
+
+.password-div {
+    position: relative;   
+    pointer-events: all;
+}
+
+.eye-b {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: #ccc;
+    position: absolute;
+    right: calc(0px + 16%);
+    top: calc(48px / 3.25);
+    width: 24px;
+    height: 24px;
+    z-index: 5;
+}
