--- a/src/app/posts/post-show/post-show.component.css
+++ b/src/app/posts/post-show/post-show.component.css
@@ -66,6 +66,12 @@
 .heart-count {
     color: #ff004c;
     margin-right: 0.25rem;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .likeAnimation {
