--- a/src/styles.css
+++ b/src/styles.css
@@ -186,6 +186,7 @@ p {
 h1 {
   margin-top: 0.25rem;
   margin-bottom: 0.5rem;
+  line-height: var(--md-sys-typescale-headline1-line-height);
 }
 
 main {
