--- a/src/app/posts/post-show/post-show.component.html
+++ b/src/app/posts/post-show/post-show.component.html
@@ -34,7 +34,7 @@
         <div :id="dropdown{{post.id}}-1" class="dropdown-content">
             <a class="dropdown-item" (click)="copyLink(post.id)">Copy Link</a>
         </div>
-        <button (click)="openDropdown(post.id + '-2')" id="dropbtn" class="icon-button">
+        <button *ngIf="userIsAuthenticated && userId === post.creator" (click)="openDropdown(post.id + '-2')" id="dropbtn" class="icon-button">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -9 24 24" width="24" fill="currentColor">
                 <path
                     d="M3 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm-7 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6z">
@@ -98,7 +98,7 @@
                 </button>
                 <label class="heart-count">{{reply.likes.length}}</label>
             </div>
-            <button (click)="openDropdown(reply.id + '-1')" id="dropbtn" class="icon-button">
+            <button *ngIf="userIsAuthenticated && userId === reply.creator" (click)="openDropdown(reply.id + '-1')" id="dropbtn" class="icon-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -9 24 24" width="24" fill="currentColor">
                     <path
                         d="M3 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm-7 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6z">
