added followers and when you delete replies the id from post.replies array is removes

--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -51,7 +51,8 @@
             <div :id="dropdown{{post.id}}-1" class="dropdown-content">
                 <a class="dropdown-item" (click)="copyLink(post.id)">Copy Link</a>
             </div>
-            <button *ngIf="userIsAuthenticated && userId === post.creator" (click)="openDropdown(post.id + '-2')" id="dropbtn" class="icon-button">
+            <button *ngIf="userIsAuthenticated && userId === post.creator" (click)="openDropdown(post.id + '-2')"
+                id="dropbtn" class="icon-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -9 24 24" width="24" fill="currentColor">
                     <path
                         d="M3 6a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm14 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm-7 0a3 3 0 1 1 0-6 3 3 0 0 1 0 6z">
