--- a/src/app/users/user-show/user-show.component.css
+++ b/src/app/users/user-show/user-show.component.css
@@ -1,5 +1,8 @@
 .user-info {
-    display: flex;
     border-bottom: 1px solid var(--md-sys-color-post-outline);
     margin-bottom: 0.5rem;
+}
+
+.followers {
+    margin-right: 1.25rem;
 }
